--- a/css/pages.css
+++ b/css/pages.css
@@ -1,14 +1,23 @@
-body {
-    padding-top: 50px;
+body,
+button,
+input,
+select,
+textarea,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Microsoft YaHei, '宋体', Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;
 }
 
-.main {
-    padding-top: 50px;
-    margin: 50px;
+.body {
+    background-color: #ebebeb;
 }
 
 .slider {
-    height: 95%;
+    margin-top: 50px;
     overflow: hidden;
 }
 
@@ -96,4 +105,140 @@ a:active {
 .aside {
     position: fixed;
     right:
+}
+
+ul.nav-tabs {
+    width: 200px;
+    margin-top: 20px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
+    background-color: white;
+}
+
+ul.nav-tabs li {
+    margin: 0;
+    border-top: 1px solid #ddd;
+}
+
+ul.nav-tabs li:first-child {
+    border-top: none;
+}
+
+ul.nav-tabs li a {
+    margin: 0;
+    padding: 8px 16px;
+    border-radius: 0;
+}
+
+ul.nav-tabs li.active a,
+ul.nav-tabs li.active a:hover {
+    color: #fff;
+    background: #f4645f;
+    border: 1px solid #f4645f;
+}
+
+ul.nav-tabs li:first-child a {
+    border-radius: 4px 4px 0 0;
+}
+
+ul.nav-tabs li:last-child a {
+    border-radius: 0 0 4px 4px;
+}
+
+ul.nav-tabs.affix {
+    top: 50px;
+    /* Set the top position of pinned element */
+}
+
+.card {
+    background-color: white;
+    padding: 21px 35px;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.header {
+    background-color: #f4645f;
+    height: 200px;
+    color: white;
+    overflow: hidden;
+}
+
+.header h1 {
+    margin: auto auto;
+    font-size: 32px;
+}
+
+.header p {
+    margin: auto auto;
+    font-size: 24px;
+}
+
+.header div {
+    width: 60%;
+    margin: 60px auto;
+}
+
+.pagewhite {
+    background-color: white;
+    font-size: 16px;
+}
+
+.pagegrey {
+    background-color: #ebebeb;
+    font-size: 16px;
+}
+
+.reheader {
+    background-image: url(../img/header.jpg)
+}
+
+.reheader2 {
+    position: fixed;
+    width: 100%;
+    height: 750px;
+    background-image: url(../img/header2.jpg);
+    z-index: -100;
+}
+
+.headercover {
+    background-color: rgba(244, 100, 95, 0.9);
+    height: 500px;
+    color: white;
+    overflow: hidden;
+}
+
+.headercover2 {
+    background-color: rgba(244, 100, 95, 0.9);
+    height: 750px;
+    color: white;
+    overflow: hidden;
+}
+
+.headercover h1,
+.headercover2 h1 {
+    text-align: center;
+    font-size: 60px;
+}
+
+.headercover p,
+.headercover2 p {
+    font-size: 32px;
+    text-align: center;
+}
+
+.pagediv {
+    position: relative;
+    margin: 40px 0;
+    padding: 40px 0;
+}
+
+.pagediv h2 {
+    font-size: 30px;
+}
+
+.intrtext {
+    padding: 0px;
+    margin-top: 15%;
 }
